# Binary-Search-Visualizer

./: .gitignore  ALGORITHMS.md  ARCHITECTURE.md  BENCHMARKS.md  README.md  pyproject.toml  requirements.txt
Schema/: README.md  cli-options.schema.json  common.schema.json  comparison-event.schema.json  config.schema.json  search-export.schema.json  search-result.schema.json  search-state.schema.json
src/bsviz/: __init__.py  __main__.py  algorithms.py  ansi.py  cli.py  commands.py  config.py  controller.py  exceptions.py  input_sources.py  interactive.py  models.py  renderers.py  serialization.py  terminal.py
tests/: test_algorithms.py  test_cli.py  test_interactive.py  test_renderers.py
